# secret-santa

./: .gitignore  .people.py  .secrets.py  README.md  checks.py  gift_pairing.py  main.py  person.py  pyproject.toml  santa_email.py
